k8s/auth-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-api
  labels:
    app: auth-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-api
  template:
    metadata:
      labels:
        app: auth-api
    spec:
      containers:
        - name: auth-api
          image: 591864715973.dkr.ecr.us-east-1.amazonaws.com/auth-api:latest
          ports:
            - name: http
              containerPort: 5000
          livenessProbe:
            httpGet:
              path: /health-check
              port: http
            initialDelaySeconds: 10
            failureThreshold: 5
            periodSeconds: 60
          readinessProbe:
            httpGet:
              path: /health-check
              port: http
            initialDelaySeconds: 5
            failureThreshold: 3
            periodSeconds: 10
