k8s/auth-api/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: auth-api
  labels:
    app: auth-api
  annotations:
    prometheus.io/scrape: "true"
spec:
  type: NodePort
  selector:
    app: auth-api
  ports:
    - name: http
      port: 80
      targetPort: http
